# rootsmith

./: .gitignore  Cargo.toml  PROTOBUF_SETUP.md  README.md  build.rs  kv-data.json  rust-toolchain.toml  rustfmt.toml  sample-data.json  system-landscape.md
artifacts/: vkey.json
benches/: prove_10k.rs
docs/: wasmer_host_implementation.md
examples/: usage_demo.rs
proto/: event.proto  incoming_record.proto
scripts/: download-artifacts.sh
src/: app.rs  app_v2.rs  config.rs  feature_select.rs  lib.rs  main.rs  rootsmith.rs  storage.rs  telemetry.rs  types.rs
src/accumulator/: merkle_accumulator.rs  sparse_merkle_accumulator.rs  variant.rs
src/archive/: file.rs  mock.rs  mod.rs  noop.rs  s3_glacier.rs  variant.rs
src/archiver/: mock.rs  mod.rs  noop.rs  s3_glacier.rs  variant.rs
src/commitment_registry/: commitment_contract.rs  commitment_noop.rs  mock.rs  mod.rs  variant.rs
src/crypto/: merkle.rs  merkle_accumulator.rs  mock_accumulator.rs  mod.rs  simple_accumulator.rs  sparse_merkle.rs  sparse_merkle_accumulator.rs  variant.rs
src/downstream/: blackhole.rs  channel.rs  commitment_contract.rs  commitment_noop.rs  mock.rs  mod.rs  proof_github.rs  proof_s3.rs  s3.rs  variant.rs
src/parser/: proto.rs
src/proof_delivery/: file.rs  kafka.rs  mock.rs  mod.rs  noop.rs  variant.rs  webhook.rs
src/proof_registry/: format.rs  mock.rs  mod.rs  noop.rs  proof_github.rs  proof_s3.rs  types.rs  variant.rs
src/rootsmith/: core.rs  mod.rs  tasks.rs  tests.rs
src/traits/: accumulator.rs  archive.rs  commitment_registry.rs  downstream.rs  mod.rs  proof_delivery.rs  proof_registry.rs  upstream.rs
src/upstream/: http.rs  kafka.rs  mock.rs  mod.rs  mqtt.rs  noop.rs  pubchannel.rs  sqs.rs  variant.rs  websocket.rs
src/wasm_host/: error.rs  host.rs  limits.rs  mod.rs
tests/: accumulator_batch_tests.rs  e2e_tests.rs  epoch_commit.rs  rocksdb_storage_tests.rs  rootsmith_commit_tests.rs  rootsmith_e2e_tests.rs  rootsmith_proof_tests.rs  rootsmith_upstream_tests.rs  sma_prover_verifier.rs  sparse_merkle_accumulator_e2e.rs  storage_scan.rs  storage_tests.rs  wasm_tests.rs
