[package]
name = "rootsmith"
version = "0.1.0"
edition = "2021"
description = "Cryptographic accumulator app with RocksDB, pluggable backends and registries"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocksdb = "0.22"
kanal = "0.1.0-pre8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
opentelemetry = { version = "0.24", features = ["trace"] }
tracing-opentelemetry = "0.27"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
async-trait = "0.1"
hyper = { version = "0.14", features = ["server", "client", "http1", "tcp"] }
rs_merkle = "1.5.0"
monotree = "0.4.0"
hex = "0.4"
sha2 = "0.10"
blake3 = "1"

# optional future deps:
# rdkafka, aws-sdk-s3, aws-sdk-sqs, mqtt clients, websockets, etc.

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
anyhow = "1"
rand = "0.8"
